update on mixins naming

--- a/src/scss/components/alert/_base.scss
+++ b/src/scss/components/alert/_base.scss
@@ -20,7 +20,7 @@
 @each $color in $component-colors {
   @each $type in $alert-types {
     .alert-#{$color}-#{$type} {
-      @include alert-style-mixin($color, $type);
+      @include alert-pattern-mixin($color, $type);
     }
   }
 }
