--- a/src/scss/components/badge/_base.scss
+++ b/src/scss/components/badge/_base.scss
@@ -13,7 +13,7 @@
 @each $color in $component-colors {
   @each $type in $badge-types {
     .badge-#{$color}-#{$type} {
-      @include badge-style-mixin($color, $type);
+      @include badge-pattern-mixin($color, $type);
     }
   }
 }
