--- a/src/scss/components/badge/_mixins.scss
+++ b/src/scss/components/badge/_mixins.scss
@@ -1,4 +1,4 @@
-@mixin badge-style-mixin($color, $type) {
+@mixin badge-pattern-mixin($color, $type) {
   @if ($type == 'solid') {
     @include badge-solid-mixin($color);
   }
